--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-Hello
+<!DOCTYPE html>
+<html>
+     <head>
+          <meta charset="utf-8">
+          <title>Halaman pertamaku</title>
+     </head>
+     <body>
+          <p>Ini adalah halaman pertamaku</p>
+<div class="container text-center">
+  <div id="particles-js"></div>
+  <div id="overlay">
+    <h1 class="heading">
+      TEXT
+    </h1>
+    <p>
+      <span class="typing"></span>
+    </p>
+  </div>
+</div>
+
+
+#particles-js {
+  background-color: #b61924;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
+}
+
+#overlay {
+  position: relative;
+  padding: 50px;
+}
+
+          
+     </body>
+</html>
+
+
