--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </nav>
 
 <!-- Menambahkan Jumbotron -->
-<div class="jumbotron">
+<div class="jumbotron container">
   <h1 class="display-4">Hi there! </h1>
   <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
   <hr class="my-4">
