--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 
     
   </head>
-    <body id="page-top">
+    <body>
+
     	<header>
+    		<div class="container">
 	        <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
 	            <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top">Bagus Frayoga Effendi</a>
 	                <button class="navbar-toggler navbar-toggler-right font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
@@ -43,6 +45,7 @@
 	                </div>
 	            </div>
 	        </nav>
+	    </div>
 	    </header>
 
 <!-- Menambahkan Jumbotron -->
@@ -52,7 +55,7 @@
 	  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
 	  <hr class="my-4">
 	  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-	  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+	  <a class="btn btn-primary btn-lg" href="#" role="button">Download CV</a>
 	</div>
 </section>
 
