--- a/index.html
+++ b/index.html
@@ -49,16 +49,17 @@
 	    </header>
 
 <!-- Menambahkan Jumbotron -->
-<section class="jumbotron-bg">
-	<div class="jumbotron container">
-	  <h1 class="display-4">Hi there! </h1>
-	  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-	  <hr class="my-4">
-	  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-	  <a class="btn btn-primary btn-lg" href="#" role="button">Download CV</a>
-	</div>
-</section>
-
+<header>
+	<section class="jumbotron-bg">
+		<div class="jumbotron container">
+		  <h1 class="display-4">Hi there! </h1>
+		  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+		  <hr class="my-4">
+		  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+		  <a class="btn btn-primary btn-lg" href="#" role="button">Download CV</a>
+		</div>
+	</section>
+</header>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
