--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 <!-- Menambahkan Jumbotron -->
 <header>
 	<section class="jumbotron-bg">
-		<div class="jumbotron container">
-		  <h1 class="display-4">Hi there! </h1>
-		  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-		  <hr class="my-4">
-		  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-		  <a class="btn btn-primary btn-lg" href="#" role="button">Download CV</a>
+		<div class="jumbotron">
+			<div class="container">
+			  <h1 class="display-4">Hi there! </h1>
+			  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+			  <a class="btn btn-primary btn-lg" href="#" role="button">Download CV</a>
+			</div>
 		</div>
 	</section>
 </header>
