--- a/index.html
+++ b/index.html
@@ -60,6 +60,36 @@
 		</div>
 	</section>
 </header>
+
+<header>
+	<section class="jumbotron-bg">
+		<div class="jumbotron">
+			<div class="container">
+			  <h1 class="display-4">Hi there! </h1>
+			  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+			  <a class="btn btn-primary btn-lg" href="#" role="button">Download CV</a>
+			</div>
+		</div>
+	</section>
+</header>
+
+<header>
+	<section class="jumbotron-bg">
+		<div class="jumbotron">
+			<div class="container">
+			  <h1 class="display-4">Hi there! </h1>
+			  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+			  <a class="btn btn-primary btn-lg" href="#" role="button">Download CV</a>
+			</div>
+		</div>
+	</section>
+</header>
+
+
+
+<!-- Menambahkan tombol top top of page -->
+<div class="scroll-to-top d-lg-none position-fixed"><a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a></div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
