--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			  <h1 class="display-4">Hi there! </h1>
 			  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
 			  <!-- Button Modal -->
-			  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
+			  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalScrollable">
   Launch demo modal
 </button>
 <!-- Modal Pop up -->
