--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 		<div class="jumbotron">
 			<div class="container">
 			  <h1 class="display-4">Hi there! </h1>
-			  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+			  <p class="lead">Hello Pals, I am seeking for new job, so I open for any opportunity right now. Since this pandemic (read: corona) still go worldwide also in Indonesia, I understand it will be hard to get new job, because the business environment is not stable right now but I do hoping and keep on struggle for getting new job. Hope y’all keep healthy and stay safe even though working from Home. My latest job was in Retail Company as a Technical Support. My main job description is to install and suggest the water filter system for home also Reverse Osmosis Dispenser for healthy drinking water base on laboratory checked. <br> <br>
+			  Okay, I am a humble, responsible, tidy, organize, hard worker also a team player that seeking for excellence and love to know new things. My weakness is speak in front of people because sometimes I feel not confident or people around me will judge me but I keep on trying to handle this by making a video blog and posted it on my youtube channel also expand my knowledge so I could be more confident to speak about a particular topic. <br></br></p>
 			  <!-- Button Modal -->
 			  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalScrollable">
   Launch demo modal
@@ -64,17 +65,18 @@
   <div class="modal-dialog modal-dialog-scrollable" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalScrollableTitle">Modal title</h5>
+        <h5 class="modal-title" id="exampleModalScrollableTitle">Contact Information</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        ...
+        <p> Hello Pals, I am seeking for new job, so I open for any opportunity right now. Since this pandemic (read: corona) still go worldwide also in Indonesia, I understand it will be hard to get new job, because the business environment is not stable right now but I do hoping and keep on struggle for getting new job. Hope y’all keep healthy and stay safe even though working from Home. My latest job was in Retail Company as a Technical Support. My main job description is to install and suggest the water filter system for home also Reverse Osmosis Dispenser for healthy drinking water base on laboratory checked. </p>
+		<p> Okay, I am a humble, responsible, tidy, organize, hard worker also a team player that seeking for excellence and love to know new things. My weakness is speak in front of people because sometimes I feel not confident or people around me will judge me but I keep on trying to handle this by making a video blog and posted it on my youtube channel also expand my knowledge so I could be more confident to speak about a particular topic. </p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
       </div>
     </div>
   </div>
