--- a/index.html
+++ b/index.html
@@ -7,111 +7,40 @@
     <meta name="description" content=""> 
     <meta name="author" content=""> 
     <title>DevBagus |  Enthusiast</title>
-    <!-- Font Awesome icons (free version)-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet">
-    <!-- Fonts CSS-->
-    <link rel="stylesheet" href="css/heading.css">
-    <link rel="stylesheet" href="css/body.css">
-    <link rel="stylesheet" href="css/particeles.css">
-    <link rel="stylesheet" href="css/timeline.css">
-
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <!-- Style CSS -->
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
     
   </head>
-    <body id="page-top">
-
-    	<header>
-    		<div class="container">
-	        <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
-	            <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top">Bagus Frayoga Effendi</a>
-	                <button class="navbar-toggler navbar-toggler-right font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
-	                <div class="collapse navbar-collapse" id="navbarResponsive">
-	                    <ul class="navbar-nav ml-auto">
-	                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">PORTFOLIO</a>
-	                        </li>
-	                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">ABOUT</a>
-	                        </li>
-	                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#education">EDUCATION</a>
-	                        </li>
-	                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#skills">SKILLS</a>
-	                        </li>
-	                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#organization">ORGANIZATION</a>
-	                        </li>
-	                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">CONTACT</a>
-	                        </li>
-	                    </ul>
-	                </div>
-	            </div>
-	        </nav>
-	    </div>
-	    </header>
-
-<!-- Menambahkan Jumbotron -->
-<header>
-	<section class="jumbotron-bg">
-		<div class="jumbotron">
-			<div class="container">
-			  <h1 class="display-4">Hi there! </h1>
-			  <p class="lead">Hello Pals, I am seeking for new job, so I open for any opportunity right now. Since this pandemic (read: corona) still go worldwide also in Indonesia, I understand it will be hard to get new job, because the business environment is not stable right now but I do hoping and keep on struggle for getting new job. Hope y’all keep healthy and stay safe even though working from Home. My latest job was in Retail Company as a Technical Support. My main job description is to install and suggest the water filter system for home also Reverse Osmosis Dispenser for healthy drinking water base on laboratory checked. <br> <br>
-			  Okay, I am a humble, responsible, tidy, organize, hard worker also a team player that seeking for excellence and love to know new things. My weakness is speak in front of people because sometimes I feel not confident or people around me will judge me but I keep on trying to handle this by making a video blog and posted it on my youtube channel also expand my knowledge so I could be more confident to speak about a particular topic. <br></br></p>
-			  <!-- Button Modal -->
-			  <button type="button" class="btn btn-primary position-right" data-toggle="modal" data-target="#exampleModalScrollable">
-  Contact Me
-</button>
-<!-- Modal Pop up -->
-<div class="modal fade" id="exampleModalScrollable" tabindex="-1" role="dialog" aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-scrollable" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalScrollableTitle">Contact Information</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <p> Hello Pals, I am seeking for new job, so I open for any opportunity right now. Since this pandemic (read: corona) still go worldwide also in Indonesia, I understand it will be hard to get new job, because the business environment is not stable right now but I do hoping and keep on struggle for getting new job. Hope y’all keep healthy and stay safe even though working from Home. My latest job was in Retail Company as a Technical Support. My main job description is to install and suggest the water filter system for home also Reverse Osmosis Dispenser for healthy drinking water base on laboratory checked. </p>
-		<p> Okay, I am a humble, responsible, tidy, organize, hard worker also a team player that seeking for excellence and love to know new things. My weakness is speak in front of people because sometimes I feel not confident or people around me will judge me but I keep on trying to handle this by making a video blog and posted it on my youtube channel also expand my knowledge so I could be more confident to speak about a particular topic. </p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
-      </div>
-    </div>
+  <body>
+  <header>
+  	<div class="container"> 
+  		<nav class="navbar navbar-expand-lg navbar-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Features</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Pricing</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+      </li>
+    </ul>
   </div>
+</nav>
 </div>
-
-
-			</div>
-		</div>
-	</section>
 </header>
-
-<header>
-	<section class="jumbotron-bg">
-		<div class="jumbotron">
-			<div class="container">
-			  <h1 class="display-4">Hi there! </h1>
-			  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-			  <a class="btn btn-primary btn-lg" href="#" role="button">Download CV</a>
-			</div>
-		</div>
-	</section>
-</header>
-
-<header>
-	<section class="jumbotron-bg">
-		<div class="jumbotron">
-			<div class="container">
-			  <h1 class="display-4">Hi there! </h1>
-			  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-			  <a class="btn btn-primary btn-lg" href="#" role="button">Download CV</a>
-			</div>
-		</div>
-	</section>
-</header>
-
 
 
 <!-- Menambahkan tombol top top of page -->
@@ -119,8 +48,8 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/jquery-3.4.1.slim.min.js"></script>
+    <script type="text/javascript" src="js/popper.min.js"></script>
+  	<script type="text/javascript" src="js/css/bootstrap.min.js"></script>
   </body>
 </html>
