--- a/index.html
+++ b/index.html
@@ -22,16 +22,19 @@
 		    <span class="navbar-toggler-icon"></span>
 		  	</button>
 		  	<div class="collapse navbar-collapse" id="navbarNav">
-			    <ul class="navbar-nav">
-			      <li class="nav-item active">
-			        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link" href="#">Features</a>
-			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link" href="#">Pricing</a>
-			      </li>
+			    <ul class="nav nav-pills">
+				  <li class="nav-item">
+				    <a class="nav-link active" href="#">About</a>
+				  </li>
+				  <li class="nav-item">
+				    <a class="nav-link" href="#">Portfolio</a>
+				  </li>
+				  <li class="nav-item">
+				    <a class="nav-link" href="#">Experience</a>
+				  </li>
+				  <li class="nav-item">
+				    <a class="nav-link" href="#">Education</a>
+				  </li>
 			    </ul>
   			</div>
   		</nav>
