--- a/index.html
+++ b/index.html
@@ -42,6 +42,21 @@
 	</header>
 
 
+<!-- Awal Jumbotron -->
+<section class="container"> 
+	<div class="jumbotron">
+		<div class="container">
+		  <h1 class="display-4">Hello, world!</h1>
+		  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+		  <hr class="my-4">
+		  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+		  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+		</div>
+	</div>
+</section>
+<!-- Akhir Jumbotron -->
+
+
 <!-- Menambahkan tombol top top of page -->
 <div class="scroll-to-top d-lg-none position-fixed"><a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a></div>
 
