--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 
 <!-- Awal Jumbotron -->
 <section class="container"> 
-	<div class="jumbotron">
+	<div class="jumbotron media">
 		<div class="rounded-circle"> 
 			<img src="https://www.yourdictionary.com/images/definitions/lg/3123.doggy.jpg" class="ml-3 rounded-circle" alt="Doggy">
 		</div>
-		<div class="container">
-		  <h2 class="display-4">Hi there !</h2>
+		<div class="container media-body">
+		  <h2 class="display-4 mt-0">Hi there !</h2>
 		  <p><b>Hello Pals</b>, I am seeking for new job, so I open for any opportunity right now. Since this pandemic (read: corona) still go worldwide also in Indonesia, I understand it will be hard to get new job, because the business environment is not stable right now but I do hoping and keep on struggle for getting new job. Hope y’all keep healthy and stay safe even though working from Home. My latest job was in Retail Company as a Technical Support. My main job description is to install and suggest the water filter system for home also Reverse Osmosis Dispenser for healthy drinking water base on laboratory checked.</p>
 
 		  <p>Okay, I am a humble, responsible, tidy, organize, hard worker also a team player that seeking for excellence and love to know new things. My weakness is speak in front of people because sometimes I feel not confident or people around me will judge me but I keep on trying to handle this by making a video blog and posted it on my youtube channel also expand my knowledge so I could be more confident to speak about a particular topic.</p>
