--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   	<header>
   	<div class="container"> 
   		<nav class="navbar navbar-expand-sm navbar-light">
-		  	<a class="navbar-brand" href="#"><span class="badge badge-secondary"><b>Dev</b></span>Bagus </a>
+		  	<a class="navbar-brand" href="#"><b>Dev</b>Bagus </a>
 		  	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  	</button>
