--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <body>
   	<header>
-  	<div class="container"> 
+  	<div class="container position-fixed"> 
   		<nav class="navbar navbar-expand-sm navbar-light">
 		  	<a class="navbar-brand" href="#"><b>Dev</b>Bagus </a>
 		  	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +43,7 @@
 
 
 <!-- Awal Jumbotron -->
-<section class="container"> 
+<section class="container-fluid"> 
 	<div class="jumbotron">
 		 <!-- <div class="rounded-circle">  
 			<img src="https://www.yourdictionary.com/images/definitions/lg/3123.doggy.jpg" class="ml-3 rounded-circle" alt="Doggy">
