--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
   	<header>
   	<div class="container position-fixed"> 
-  		<nav class="navbar navbar-expand-lg navbar-dark">
+  		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		  	<a class="navbar-brand" href="#"><b>Dev</b>Bagus </a>
 		  	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
