--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>BagusDev | Enthusiast</title>
+  <title>BagusDev |  Enthusiast</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -59,12 +59,12 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Bagus Frayoga Effendi</h1>
+      <h1><b>Dev</b>Bagus  </h1>
       <p>I'm <span class="typed" data-typed-items="Engineer, Developer"></span></p>
       <div class="social-links">
         <a href="http://twitter.com/bagusfedotid" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="http://facebook.com/bagusfe.id" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="instagram.com/bagusfe.id" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="http://instagram.com/bagusfe.id" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
         <a href="http://linkedin.com/in/bagusfedotid" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
@@ -79,7 +79,7 @@
 
         <div class="section-title">
           <h2>About me</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p><b>Hi there</b>, here a little bit about me. I am a humble, responsible, tidy, organize, hard worker also a team player that seeking for excellence and love to know new things. My weakness is speak in front of people because sometimes I feel not confident or people around me will judge me but I keep on trying to handle this by making a video blog and posted it on my youtube channel also expand my knowledge so I could be more confident to speak about a particular topic.</p>
         </div>
 
         <div class="row">
@@ -87,7 +87,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>Electronic Engineer &amp; Mobile Developer.</h3>
             <p class="font-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
@@ -95,18 +95,18 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 May 1995</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +123 456 7890</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : New York, USA</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Birthday \t:</strong> XX XX XXXX</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Website \t:</strong> www.bagusfe.id</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone \t:</strong> +62 812 5051 0066</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>City \t:</strong> West Jakarta, ID</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 30</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Master</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>PhEmailone:</strong> email@example.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Age \t:</strong> 26</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Degree \t:</strong> Bachelor</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>E-mail \t:</strong> goodfe@yahoo.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Freelance \t:</strong> Available</li>
                 </ul>
               </div>
             </div>
