--- a/index.html
+++ b/index.html
@@ -95,18 +95,18 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday \t:</strong> XX XX XXXX</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website \t:</strong> www.bagusfe.id</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone \t:</strong> +62 812 5051 0066</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City \t:</strong> West Jakarta, ID</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Birthday	:</strong> XX XX XXXX</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Website		:</strong> www.bagusfe.id</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone		:</strong> +62 812 5051 0066</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>City		:</strong> West Jakarta, ID</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age \t:</strong> 26</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree \t:</strong> Bachelor</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>E-mail \t:</strong> goodfe@yahoo.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Freelance \t:</strong> Available</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Age			:</strong> 26</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Degree		:</strong> Bachelor</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>E-mail		:</strong> goodfe@yahoo.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Freelance 	:</strong> Available</li>
                 </ul>
               </div>
             </div>
