--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <li><a href="#portfolio"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
         <li><a href="#services"><i class="bx bx-server"></i> <span>Services</span></a></li>
         <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+        <li><a href="#contact"><i class="bx bxl-github"></i> <span>GitHub</span></a></li>
+        <li><a href="#contact"><i class="bx bx-cloud-download"></i> <span>Download CV</span></a></li>
+        <li><a href="https://bagusfe.id/blog"><i class="bx bx-qoute-alt-left"></i> <span>Read Blog</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -59,13 +62,15 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1><b>Dev</b>Bagus  </h1>
-      <p>I'm <span class="typed" data-typed-items="Engineer, Developer"></span></p>
+      <h1><b>Bagus</b>Dev  </h1>
+      <p>I'm <span class="typed" data-typed-items="Engineer, Developer, Good Talent!"></span></p>
       <div class="social-links">
         <a href="http://twitter.com/bagusfedotid" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="http://facebook.com/bagusfe.id" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="http://instagram.com/bagusfe.id" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="http://wa.me/+6281250510066" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+        <a href="http://yt.bagusfe.id" class="youtube"><i class="bx bxl-youtube"></i></a>
+        <a href="http://snapchat.com/add/gewdfe" class="snapchat"><i class="bx bxl-snapchat"></i></a>
         <a href="http://linkedin.com/in/bagusfedotid" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
@@ -545,7 +550,9 @@
         <a href="http://twitter.com/bagusfedotid" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="http://facebook.com/bagusfe.id" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="http://instagram.com/bagusfe.id" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="http://wa.me/+6281250510066" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+        <a href="http://yt.bagusfe.id" class="youtube"><i class="bx bxl-youtube"></i></a>
+        <a href="http://snapchat.com/add/gewdfe" class="snapchat"><i class="bx bxl-snapchat"></i></a>
         <a href="http://linkedin.com/in/bagusfedotid" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
