--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
   <footer id="footer">
     <div class="container">
       <h3>Bagus Frayoga Effendi, S.T</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <p>Aku hendak bersyukur kepada-Mu selama-lamanya, sebab Engkaulah yang bertindak; karena nama-Mu baik, aku hendak memasyhurkannya di depan orang-orang yang Kaukasihi! ~ Mazmur 52:9</p>
       <div class="social-links">
         <a href="http://twitter.com/bagusfedotid" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="http://facebook.com/bagusfe.id" class="facebook"><i class="bx bxl-facebook"></i></a>
