--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
         <li><a href="#portfolio"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
         <li><a href="#services"><i class="bx bx-server"></i> <span>Services</span></a></li>
         <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-        <li><a href="#contact"><i class="bx bxl-github"></i> <span>GitHub</span></a></li>
-        <li><a href="#contact"><i class="bx bx-cloud-download"></i> <span>Download CV</span></a></li>
-        <li><a href="https://bagusfe.id/blog"><i class="bx bx-qoute-alt-left"></i> <span>Read Blog</span></a></li>
+        <li><a href="http://github.com/bagusfe"><i class="bx bxl-github"></i> <span>GitHub</span></a></li>
+        <li><a href="#"><i class="bx bx-cloud-download"></i> <span>Download CV</span></a></li>
+        <li><a href="https://bagusfe.id/blog"><i class="bx bx-book"></i> <span>Read Blog</span></a></li>
+        <li><a href="https://toko.bagusfe.id"><i class="bx bx-store"></i> <span>My Store</span></a></li>
+        <li><a href="https://saweria.co/bagusfe"><i class="bx bx-money"></i> <span>Donate</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -67,10 +69,7 @@
       <div class="social-links">
         <a href="http://twitter.com/bagusfedotid" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="http://facebook.com/bagusfe.id" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="http://instagram.com/bagusfe.id" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="http://wa.me/+6281250510066" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
         <a href="http://yt.bagusfe.id" class="youtube"><i class="bx bxl-youtube"></i></a>
-        <a href="http://snapchat.com/add/gewdfe" class="snapchat"><i class="bx bxl-snapchat"></i></a>
         <a href="http://linkedin.com/in/bagusfedotid" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
@@ -547,13 +546,13 @@
       <h3>Bagus Frayoga Effendi, S.T</h3>
       <p>Aku hendak bersyukur kepada-Mu selama-lamanya, sebab Engkaulah yang bertindak; karena nama-Mu baik, aku hendak memasyhurkannya di depan orang-orang yang Kaukasihi! ~ Mazmur 52:9</p>
       <div class="social-links">
+        <a href="http://instagram.com/bagusfe.id" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="http://twitter.com/bagusfedotid" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="http://facebook.com/bagusfe.id" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="http://instagram.com/bagusfe.id" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="http://wa.me/+6281250510066" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
         <a href="http://yt.bagusfe.id" class="youtube"><i class="bx bxl-youtube"></i></a>
         <a href="http://snapchat.com/add/gewdfe" class="snapchat"><i class="bx bxl-snapchat"></i></a>
         <a href="http://linkedin.com/in/bagusfedotid" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="http://wa.me/+6281250510066" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span><b>Dev</b>Bagus </span></strong>. All Rights Reserved
