--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <div class="section-title">
           <h2>About me</h2>
-          <p><b>Hi there</b>, here a little bit about me. I am a humble, responsible, tidy, organize, hard worker also a team player that seeking for excellence and love to know new things. My weakness is speak in front of people because sometimes I feel not confident or people around me will judge me but I keep on trying to handle this by making a video blog and posted it on my youtube channel also expand my knowledge so I could be more confident to speak about a particular topic.</p>
+          <p><b>Hi there</b>, this is a little bit about me. I am a humble, responsible, tidy, organize, hard worker also a team player that seeking for excellence and love to know new things. My weakness is speak in front of people because sometimes I feel not confident or people around me will judge me but I keep on trying to handle this by making a video blog and posted it on my youtube channel also expand my knowledge so I could be more confident to speak about a particular topic.</p>
         </div>
 
         <div class="row">
@@ -251,35 +251,39 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
+              <h4>Bagus Frayoga Effendi, S.T</h4>
               <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Banjarmasin - Jakarta, ID</li>
+                <li>(0812) 5051-0066</li>
+                <li>goodfe@yahoo.com</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Fakultas Teknik Elektronika &amp; Komputer</h4>
+              <h5>2013 - 2018</h5>
+              <p><em>Universitas Kristen Satya Wacana, Salatiga, Central Java, ID</em></p>
+              <ul>
+                <li>IPK : 2.89</li>
+                <li>Major: Instrumentasi</li>
+              </ul>
+              <p>Judul Tesis: "Perancangan Alat Kentongan Elektronik Menggunakan Mikrokontroler NodeMCU berbasis Internet of Things (IoT).</p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>SMA Negeri 1 Muara Uya</h4>
+              <h5>2010 - 2013</h5>
+              <p><em>Tabalong, South Borneo, ID</em></p>
+              <p>Saya mengambil jurusan Ilmu Pengetahuan Alam.</p>
             </div>
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Technical Support</h4>
+              <h5>Nov 2019 - Jun 2020</h5>
+              <p><em>Kebayoran Lama, South Jakarta, ID </em></p>
               <ul>
                 <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
                 <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
@@ -288,9 +292,21 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Production Supervisor</h4>
+              <h5>Mar 2019 - Jul 2019</h5>
+              <p><em>PT Karunia Prima Engineering</em></p>
+              <p><em>Sidoarjo, East Java, ID</em></p>
+              <ul>
+                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
+                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
+                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
+                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Internship Engineer</h4>
+              <h5>Aug 2018 - Oct 2018</h5>
+              <p><em>Surabaya, East Java, ID</em></p>
               <ul>
                 <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
                 <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
